[PE] Enable ControlClip for LayoutFileUploadControl

We had output the clip before SPv175 with ClipRecorder but not for
SPv175. We also lost the early return on empty clip_rect in
crrev.com/569459.
See https://chromium-review.googlesource.com/c/chromium/src/+/1110496/6/third_party/blink/renderer/core/paint/file_upload_control_painter.cc
for the old code.

Now enable ControlClip for LayoutFileUploadControl to emit the clip.

Bug: 875460
Change-Id: I0f4141eeb0e8d62ccdf9aa4df368f65e207df7d3
Reviewed-on: https://chromium-review.googlesource.com/1183783
Commit-Queue: Philip Rogers <pdr@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585038}
Former-commit-id: 66cfe1a9a7ad5b5a64d2e7cd864551ae13dcd61f